fixed footer overflow

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -11,6 +11,7 @@
   }
   ul {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin: 0 0 2rem;
     padding: 0;
